# rag-agent-toolkit-rs

./: .gitignore  Cargo.toml  README.md  config.example.toml  run.sh
data/: company_overview.md  pricing.md  product_specs.txt  support_faq.txt
src/: agent.rs  config.rs  lib.rs  main.rs  metrics.rs  models.rs  rag.rs  sessions.rs  tools.rs
src/api/: chat.rs  config.rs  mod.rs  models.rs  rag.rs  upload.rs
src/rag/: bm25.rs  chunk.rs  embed.rs  fastembed_provider.rs  hybrid.rs  store.rs  types.rs
templates/: index.html
tests/: rag_integration.rs
